<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="UTF-8">
  <title>CMakeLists.txt</title>
</head>
<body>
<!-- BEGIN SCAT CODE -->
cmake_minimum_required(VERSION&nbsp;3.12)<br>
<br>
set(CROW_TOP_LEVEL&nbsp;OFF)<br>
if(CMAKE_SOURCE_DIR&nbsp;STREQUAL&nbsp;CMAKE_CURRENT_SOURCE_DIR)<br>
&nbsp;&nbsp;&nbsp;&nbsp;set(CROW_TOP_LEVEL&nbsp;ON)<br>
endif()<br>
<br>
project(crow&nbsp;LANGUAGES&nbsp;CXX&nbsp;C)<br>
<br>
set(CMAKE_CXX_STANDARD&nbsp;20)<br>
set(CMAKE_CXX_STANDARD_REQUIRED&nbsp;ON)<br>
set(CMAKE_C_STANDARD&nbsp;11)<br>
set(CMAKE_C_STANDARD_REQUIRED&nbsp;ON)<br>
<br>
if(CROW_TOP_LEVEL)<br>
&nbsp;&nbsp;&nbsp;&nbsp;set(CMAKE_VERBOSE_MAKEFILE&nbsp;ON)<br>
endif()<br>
<br>
include(GNUInstallDirs)<br>
#&nbsp;Явные&nbsp;пути&nbsp;установки:&nbsp;библиотека&nbsp;в&nbsp;/usr/lib,&nbsp;заголовки&nbsp;в&nbsp;/usr/local/include<br>
set(CMAKE_INSTALL_LIBDIR&nbsp;&quot;/usr/lib&quot;)<br>
set(CMAKE_INSTALL_INCLUDEDIR&nbsp;&quot;/usr/local/include&quot;)<br>
find_package(Threads&nbsp;REQUIRED)<br>
<br>
option(CROW_BUILD_APPS&nbsp;&quot;Build&nbsp;crow&nbsp;command&nbsp;line&nbsp;utilities&quot;&nbsp;${CROW_TOP_LEVEL})<br>
option(CROW_BUILD_TESTS&nbsp;&quot;Build&nbsp;crow&nbsp;tests&quot;&nbsp;${CROW_TOP_LEVEL})<br>
<br>
if(STATIC_LIBS)<br>
&nbsp;&nbsp;&nbsp;&nbsp;set(CMAKE_SHARED_LINKER_FLAGS&nbsp;&quot;${CMAKE_SHARED_LINKER_FLAGS}&nbsp;-static-libstdc++&quot;)<br>
endif()<br>
<br>
add_compile_definitions(CROW_USE_ASYNCIO=1)<br>
if(WIN32)<br>
&nbsp;&nbsp;&nbsp;&nbsp;add_compile_definitions(_CRT_SECURE_NO_WARNINGS)<br>
else()<br>
&nbsp;&nbsp;&nbsp;&nbsp;add_compile_definitions(CROW_REALTIME_THREADS=1)<br>
endif()<br>
<br>
file(GLOB&nbsp;CROW_HEADERS<br>
&nbsp;&nbsp;&nbsp;&nbsp;crow/*.h<br>
)<br>
<br>
file(GLOB&nbsp;CROW_SOURCES&nbsp;CONFIGURE_DEPENDS<br>
&nbsp;&nbsp;&nbsp;&nbsp;crow/src/*.cpp<br>
&nbsp;&nbsp;&nbsp;&nbsp;crow/src/*.c<br>
	crow/src/variants/allocation_malloc.cpp<br>
	crow/src/variants/crow_print.cpp<br>
	crow/src/variants/warn.cpp<br>
	crow/src/variants/stdtime.cpp<br>
&nbsp;&nbsp;&nbsp;&nbsp;crow/pubsub/*.cpp<br>
&nbsp;&nbsp;&nbsp;&nbsp;crow/nodes/*.cpp<br>
&nbsp;&nbsp;&nbsp;&nbsp;crow/proto/*.cpp<br>
&nbsp;&nbsp;&nbsp;&nbsp;crow/gates/udpgate.cpp<br>
&nbsp;&nbsp;&nbsp;&nbsp;crow/gates/tcpgate.cpp<br>
&nbsp;&nbsp;&nbsp;&nbsp;crow/gates/chardev/*.cpp<br>
&nbsp;&nbsp;&nbsp;&nbsp;crow/brocker/*.cpp<br>
)<br>
<br>
if(NOT&nbsp;WIN32)<br>
&nbsp;&nbsp;&nbsp;&nbsp;list(APPEND&nbsp;CROW_SOURCES&nbsp;crow/gates/serial_gstuff.cpp)<br>
endif()<br>
<br>
add_library(crow&nbsp;SHARED&nbsp;${CROW_SOURCES})<br>
<br>
target_include_directories(crow<br>
&nbsp;&nbsp;&nbsp;&nbsp;PUBLIC<br>
&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$&lt;BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}&gt;<br>
&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$&lt;INSTALL_INTERFACE:${CMAKE_INSTALL_FULL_INCLUDEDIR}&gt;<br>
)<br>
<br>
if(ADDITIONAL_INCLUDES_IGRIS)<br>
&nbsp;&nbsp;&nbsp;&nbsp;target_include_directories(crow&nbsp;PRIVATE&nbsp;${ADDITIONAL_INCLUDES_IGRIS})<br>
endif()<br>
<br>
if(ADDITIONAL_INCLUDES_NOS)<br>
&nbsp;&nbsp;&nbsp;&nbsp;target_include_directories(crow&nbsp;PRIVATE&nbsp;${ADDITIONAL_INCLUDES_NOS})<br>
endif()<br>
<br>
if(IGRIS_LIBRARY_PATH)<br>
&nbsp;&nbsp;&nbsp;&nbsp;target_link_directories(crow&nbsp;PUBLIC&nbsp;${IGRIS_LIBRARY_PATH}/build-android)<br>
endif()<br>
<br>
if(NOS_LIBRARY_PATH)<br>
&nbsp;&nbsp;&nbsp;&nbsp;target_link_directories(crow&nbsp;PUBLIC&nbsp;${NOS_LIBRARY_PATH}/build-android)<br>
endif()<br>
<br>
target_link_libraries(crow<br>
&nbsp;&nbsp;&nbsp;&nbsp;PUBLIC<br>
&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;igris<br>
&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;nos<br>
&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Threads::Threads<br>
)<br>
<br>
if(WIN32)<br>
&nbsp;&nbsp;&nbsp;&nbsp;target_link_libraries(crow&nbsp;PRIVATE&nbsp;ws2_32)<br>
endif()<br>
<br>
if(CROW_BUILD_APPS)<br>
&nbsp;&nbsp;&nbsp;&nbsp;add_executable(ctrans&nbsp;apps/ctrans/main.cpp)<br>
&nbsp;&nbsp;&nbsp;&nbsp;target_link_libraries(ctrans&nbsp;PRIVATE&nbsp;crow)<br>
&nbsp;&nbsp;&nbsp;&nbsp;target_include_directories(ctrans&nbsp;PRIVATE&nbsp;apps/ctrans)<br>
<br>
&nbsp;&nbsp;&nbsp;&nbsp;add_executable(crowker<br>
&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;apps/crowker/main.cpp<br>
&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;apps/crowker/control_node.cpp<br>
&nbsp;&nbsp;&nbsp;&nbsp;)<br>
&nbsp;&nbsp;&nbsp;&nbsp;target_link_libraries(crowker&nbsp;PRIVATE&nbsp;crow)<br>
&nbsp;&nbsp;&nbsp;&nbsp;target_include_directories(crowker&nbsp;PRIVATE&nbsp;apps/crowker)<br>
endif()<br>
<br>
if(CROW_BUILD_TESTS)<br>
&nbsp;&nbsp;&nbsp;&nbsp;enable_testing()<br>
&nbsp;&nbsp;&nbsp;&nbsp;file(GLOB&nbsp;CROW_TEST_SOURCES&nbsp;CONFIGURE_DEPENDS&nbsp;tests/*.cpp&nbsp;)<br>
&nbsp;&nbsp;&nbsp;&nbsp;add_executable(crow_test&nbsp;${CROW_TEST_SOURCES})<br>
&nbsp;&nbsp;&nbsp;&nbsp;target_link_libraries(crow_test&nbsp;PRIVATE&nbsp;crow)<br>
&nbsp;&nbsp;&nbsp;&nbsp;target_include_directories(crow_test&nbsp;PRIVATE&nbsp;tests)<br>
&nbsp;&nbsp;&nbsp;&nbsp;add_test(NAME&nbsp;crow_test&nbsp;COMMAND&nbsp;crow_test)<br>
endif()<br>
<br>
install(TARGETS&nbsp;crow<br>
&nbsp;&nbsp;&nbsp;&nbsp;LIBRARY&nbsp;DESTINATION&nbsp;${CMAKE_INSTALL_LIBDIR}<br>
)<br>
<br>
install(DIRECTORY&nbsp;crow<br>
&nbsp;&nbsp;&nbsp;&nbsp;DESTINATION&nbsp;${CMAKE_INSTALL_INCLUDEDIR}<br>
&nbsp;&nbsp;&nbsp;&nbsp;PATTERN&nbsp;&quot;*HIDE*&quot;&nbsp;EXCLUDE<br>
)<br>
<br>
if(CROW_BUILD_APPS)<br>
&nbsp;&nbsp;&nbsp;&nbsp;install(TARGETS&nbsp;ctrans&nbsp;crowker<br>
&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;RUNTIME&nbsp;DESTINATION&nbsp;${CMAKE_INSTALL_BINDIR}<br>
&nbsp;&nbsp;&nbsp;&nbsp;)<br>
endif()<br>
<br>
if(NOT&nbsp;CROW_TOP_LEVEL)<br>
&nbsp;&nbsp;&nbsp;&nbsp;set(CROW_SOURCES&nbsp;${CROW_SOURCES}&nbsp;PARENT_SCOPE)<br>
&nbsp;&nbsp;&nbsp;&nbsp;set(CROW_HEADERS&nbsp;${CROW_HEADERS}&nbsp;PARENT_SCOPE)<br>
endif()<br>
<!-- END SCAT CODE -->
</body>
</html>
